# LinkedIn-Job-Scraper

./: app.py  pyproject.toml
linkedin-scraper/: __main__.py  main.py  routes.py
storage/datasets/default/: __metadata__.json
storage/request_queues/default/: __metadata__.json  adZKmqXUTvydlpY.json
