[tool.poetry]
name = "linkedin-scraper"
version = "0.0.1"
description = ""
authors = ["Vishwa jvishu06@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
crawlee = {version = "*", extras = ["playwright"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
